# corelib-cpp

./: .gitignore  CMakeLists.txt  CONFORMANCE_GAP_ANALYSIS.md  Doxyfile.in  README.md  conanfile.py  coverage-cpp.json  renovate.json
.devcontainer/: Dockerfile  attach.sh  build.sh  devcontainer.json  start.sh
.github/scripts/: check-package-versions.sh
.github/workflows/: build-clang-x86_64.yaml  build-doxygen.yaml  build-gcc-ppc64-bigendian.yaml  build-gcc-x86_64.yaml  callgrind-gate.yml  coverage.yaml  package-version-check.yaml  version-consistency.yaml
assets/: test_vectors.json
bench/: CMakeLists.txt  bench.cpp  perf.cpp  run_callgrind.sh
cmake/: sofa-buffers-corelib-cpp-config.cmake.in  sofab_install.cmake
include/sofab/: sofab.hpp
ports/sofa-buffers-corelib-cpp/: portfile.cmake  usage  vcpkg.json
test/: CMakeLists.txt  test_roundtrip.cpp  test_vectors.cpp
test/shared/: README.md  sofab_test_json.c  sofab_test_json.h
